# agent-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: baseline_outputs.md  week-3-report.md  week1-2-progress.md  week2-progress.md  weekly-progress-report.md
scripts/: run_baseline.py  verify_setup.py
src/job_scout/: __init__.py  agent.py  claude_cli.py  config.py  db.py  jobs.py  main.py  remoteok.py  remotive.py  resume.py  tools.py
tests/fixtures/: resume_data_analyst.md  resume_devops_sre.md  resume_ml_engineer.md  resume_python_backend.md  resume_react_frontend.md
