[project]
name = "job-scout-agent"
version = "0.1.0"
description = "An AI agent that reads a résumé and finds matching jobs."
requires-python = ">=3.11"
# Claude is reached via the `claude` CLI (Claude Code), installed separately —
# not a pip dependency. See README → Authentication.
dependencies = [
    "langgraph>=0.2",
    "requests>=2.31",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional direct-SDK backend, if we ever bypass the CLI.
sdk = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
job-scout = "job_scout.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
